cmake_minimum_required(VERSION 3.19)
project(cppPractice)

set(CMAKE_CXX_STANDARD 14)

add_executable(cppPractice main.cpp sumOfTwoInt.cpp sumOfTwoInt.h climbStairs.cpp climbStairs.h minCostClimbingStairs.cpp minCostClimbingStairs.h numDecodings.cpp numDecodings.h binaryTreeNode.cpp binaryTreeNode.h hashSetTest.cpp hashSetTest.h)
